--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,9 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
+    //Coil
+    implementation("io.coil-kt:coil:1.4.0")
+
     //View Pager
     implementation "androidx.viewpager2:viewpager2:1.0.0"
 
