--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    buildFeatures {
-        viewBinding = true
+    viewBinding {
+        enabled = true
     }
+
+    dataBinding {
+        enabled = true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -78,8 +83,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.8.1"
     implementation "com.google.code.gson:gson:2.8.6"
 
-    //Glide
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    //ImagePicker
+    implementation 'io.github.ParkSangGwon:tedimagepicker:1.2.6'
 
     //Coil
     implementation("io.coil-kt:coil:1.4.0")
