--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ plugins {
     id "kotlin-kapt"
     id "kotlin-android"
     id "dagger.hilt.android.plugin"
-    id 'com.google.secrets_gradle_plugin' version '0.4'
-}
+    id("com.google.android.libraries.mapsplatform.secrets-gradle-plugin")
+ }
 
 android {
     compileSdkVersion 31
@@ -49,23 +49,23 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.multidex:multidex:2.0.1'
 
     // Used for "old" version
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
 
     // Hilt
     implementation("com.google.dagger:hilt-android:$hilt_version")
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.google.android.gms:play-services-maps:18.0.0'
     kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
 
     // Provides lifecycle and coroutines scopes
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0-rc01"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
 
     // Provides 'by viewModels' delegate
     implementation "androidx.fragment:fragment-ktx:1.3.6"
@@ -95,6 +95,9 @@ dependencies {
 
     //View Pager
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    //google service
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
     testImplementation "junit:junit:4.13.2"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
