--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.3.6"
 
     //Room
-    def room_version = "2.3.0"
+    def room_version = "2.4.0-beta01"
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor "androidx.room:room-compiler:$room_version"
     // To use Kotlin annotation processing tool (kapt)
