--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
 
     // Provides lifecycle and coroutines scopes
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+
 
     // Provides 'by viewModels' delegate
     implementation "androidx.fragment:fragment-ktx:1.3.6"
