--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,9 @@ plugins {
     id "kotlin-kapt"
     id "kotlin-android"
     id "dagger.hilt.android.plugin"
-    id("com.google.android.libraries.mapsplatform.secrets-gradle-plugin")
- }
+    id "com.google.android.libraries.mapsplatform.secrets-gradle-plugin"
+    id "com.google.gms.google-services"
+}
 
 android {
     compileSdkVersion 31
@@ -100,6 +101,10 @@ dependencies {
 
     //google service
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+
+    //Firestore
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+    implementation 'com.google.firebase:firebase-firestore-ktx'
 
     testImplementation "junit:junit:4.13.2"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
