--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,9 @@ android {
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        testInstrumentationRunnerArguments clearPackageData: 'true'
 
         kapt {
             arguments {
@@ -50,6 +51,9 @@ android {
     }
     testOptions {
         unitTests.returnDefaultValues = true
+        unitTests {
+            includeAndroidResources = true
+        }
     }
 }
 
@@ -57,12 +61,13 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.multidex:multidex:2.0.1'
 
-    // Used for "old" version
+    //Architectural Components
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0"
 
     // Hilt
@@ -72,6 +77,7 @@ dependencies {
     kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
 
     // Provides lifecycle and coroutines scopes
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
 
@@ -80,10 +86,10 @@ dependencies {
 
 
     // Provides 'by viewModels' delegate
-    implementation "androidx.fragment:fragment-ktx:1.3.6"
+    implementation "androidx.fragment:fragment-ktx:1.4.0"
 
     //Room
-    def room_version = "2.4.0-beta01"
+    def room_version = "2.4.0-rc01"
     implementation("androidx.room:room-runtime:$room_version")
     annotationProcessor "androidx.room:room-compiler:$room_version"
     // To use Kotlin annotation processing tool (kapt)
@@ -99,9 +105,6 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:4.8.1"
     implementation "com.google.code.gson:gson:2.8.6"
 
-    //ImagePicker
-    implementation 'io.github.ParkSangGwon:tedimagepicker:1.2.6'
-
     //Coil
     implementation("io.coil-kt:coil:1.4.0")
 
@@ -116,12 +119,18 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
 
+
     testImplementation "junit:junit:4.13.2"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.31'
     testImplementation "io.mockk:mockk:1.11.0"
     // Used for "old" version
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'androidx.test:core:1.4.1-alpha03'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'android.arch.core:core-testing:1.1.1'
+
+    testImplementation 'org.robolectric:robolectric:4.7.3'
+
 }
