--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
 
-    ext.kotlin_version = "1.6.0"
-    ext.hilt_version = "2.38.1"
+    ext.kotlin_version = "1.5.31"
+    ext.hilt_version = "2.40"
 
     repositories {
         google()
@@ -11,7 +11,7 @@ buildscript {
     }
     dependencies {
         classpath ("com.android.tools.build:gradle:7.0.3")
-        classpath ("org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31")
+        classpath ("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
         classpath ("com.google.dagger:hilt-android-gradle-plugin:$hilt_version")
         classpath ("com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.0")
         classpath ("com.google.gms:google-services:4.3.10")
