--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id "kotlin-kapt"
     id "kotlin-android"
     id "dagger.hilt.android.plugin"
-    id "com.google.android.libraries.mapsplatform.secrets-gradle-plugin"
     id "com.google.gms.google-services"
 }
 
@@ -25,8 +24,8 @@ android {
             }
         }
 
-        //        buildConfigField 'String', 'MAPS_API_KEY', MAPS_API_KEY
-//        resValue 'string', 'MAPS_API_KEY', MAPS_API_KEY
+        buildConfigField 'String', 'MAPS_API_KEY', MAPS_API_KEY
+        resValue 'string', 'MAPS_API_KEY', MAPS_API_KEY
     }
     buildTypes {
         release {
